--- a/css/style.css
+++ b/css/style.css
@@ -392,28 +392,7 @@ nav ul li a:hover {
   font-weight: 400;
   text-align: right;
 }
-/* #servies .container .box-serves-p p {
-  width: 40%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 0.5%;
-  font-size: 1.4rem;
-  background-color: #7e181e;
-  border-top-right-radius: 30.71px;
-  position: relative;
-}
-#servies .container .box-serves-p p::before {
-  content: "";
-  position: absolute;
-  top: 30%;
-  right: -5%;
-  border-width: 0.8rem;
-  border-style: solid;
-  border-color: transparent #f2efe8 transparent transparent;
-} */
+
 #servies .container .box-serves h4 {
   width: 80%;
   color: #f2efe8;
@@ -432,27 +411,7 @@ nav ul li a:hover {
   text-align: center;
   color: #f2efe8;
 }
-/* #servies .container .serves-images {
-  width: 70%;
-  height: 30%;
-  margin-bottom: 2.5%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-#servies .container .serves-images .img-container {
-  width: 40%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-#servies .container .box-serves .serves-images img {
-  width: 100%;
-  height: 100%;
-} */
 #servies .markting-container {
   margin-top: 5%;
   margin-bottom: 5%;
@@ -1107,15 +1066,23 @@ footer div .form form button {
   #servies .container .box-serves p {
     margin-top: 5%;
   }
-  #servies .container .serves-images {
+  #servies .markting-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-  #servies .container .serves-images .img-container {
-    height: 10%;
-  }
-  #servies .container .serves-images .img-container img {
+  #servies .markting-container .step {
+    margin-bottom: 5%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #servies .markting-container .step .step-p {
+    width: 70%;
   }
   #servies .container .line {
     width: auto;
