--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,23 @@ header {
 .mobile-nav {
   display: none;
 }
+.menu {
+  display: none;
+}
+.active {
+  display: block;
+}
+
+#burger {
+  z-index: 1000;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #b1414d;
+  opacity: 0.8;
+}
 nav {
   display: flex;
   justify-content: space-between;
