--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #333;
+  position: relative;
 }
 a {
   text-decoration: none;
@@ -36,8 +37,9 @@ header {
 #burger {
   z-index: 1000;
   width: 100%;
+  height: 100%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #b1414d;
