--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,11 @@ header {
   display: none;
 }
 .active {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
 #burger {
   z-index: 1000;
   width: 100%;
@@ -43,8 +45,44 @@ header {
   top: 0;
   left: 0;
   background-color: #b1414d;
-  opacity: 0.8;
+  /* opacity: 0.8; */
 }
+#burger ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+#burger ul li {
+  width: 100%;
+  text-align: center;
+}
+#burger ul li a {
+  font-size: 1.5rem;
+  color: #f2efe8;
+}
+#burger .burger-item {
+  width: 100%;
+  height: 15%;
+  font-size: 3rem;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+#burger div button {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #f2efe8;
+  display: flex;
+  padding: 3%;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -1063,7 +1101,6 @@ footer div .form form button {
   }
   #team .container .team-img .team-p-container {
     width: 75%;
-
     position: static;
     margin-bottom: 5%;
     margin-left: auto;
