--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,7 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 2%;
-  background-image: url("../images/footer.png");
+  background-image: url("../images/footer-wave.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -963,6 +963,10 @@ footer div .form form button {
     top: 0;
     left: 0;
     background-color: #b1414d;
+    background-image: url("../images/backburger.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     /* opacity: 0.8; */
   }
   #burger ul {
@@ -1046,10 +1050,10 @@ footer div .form form button {
     text-align: center;
   }
   #who-us .container {
-    background-image: none;
-    /* background-size: cover;
+    background-image: url("../images/section-tow-mob.png");
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: center; */
+    background-position: center;
   }
   #who-us .container .who-us-text {
     align-items: center;
