--- a/css/style-en.css
+++ b/css/style-en.css
@@ -146,7 +146,10 @@ footer div .foot-nav li a {
     display: none;
   }
   #who-us .container {
-    background-image: none;
+    background-image: url("../images/section-tow-mob.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
   }
   #who-us .container .who-us-text {
     width: 100%;
